# BeastEm

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  LICENSE  Makefile  README.md  VIDEOBEAST.md  beastem.cpp  beastem_orig  test_debugmanager
.claude/commands/: bmad-agent-bmad-master.md  bmad-agent-bmm-analyst.md  bmad-agent-bmm-architect.md  bmad-agent-bmm-dev.md  bmad-agent-bmm-pm.md  bmad-agent-bmm-quick-flow-solo-dev.md  bmad-agent-bmm-quinn.md  bmad-agent-bmm-sm.md  bmad-agent-bmm-tech-writer.md  bmad-agent-bmm-ux-designer.md  bmad-bmm-check-implementation-readiness.md  bmad-bmm-code-review.md  bmad-bmm-correct-course.md  bmad-bmm-create-architecture.md  bmad-bmm-create-epics-and-stories.md  bmad-bmm-create-excalidraw-dataflow.md  bmad-bmm-create-excalidraw-diagram.md  bmad-bmm-create-excalidraw-flowchart.md  bmad-bmm-create-excalidraw-wireframe.md  bmad-bmm-create-prd.md  bmad-bmm-create-product-brief.md  bmad-bmm-create-story.md  bmad-bmm-create-ux-design.md  bmad-bmm-dev-story.md  bmad-bmm-document-project.md  bmad-bmm-qa-automate.md  bmad-bmm-quick-dev.md  bmad-bmm-quick-spec.md  bmad-bmm-research.md  bmad-bmm-retrospective.md  bmad-bmm-sprint-planning.md  bmad-bmm-sprint-status.md  bmad-brainstorming.md  bmad-editorial-review-prose.md  bmad-editorial-review-structure.md  bmad-help.md  bmad-index-docs.md  bmad-party-mode.md  bmad-review-adversarial-general.md  bmad-shard-doc.md
_bmad-output/implementation-artifacts/: 1-1-breakpoint-management-core.md  1-2-breakpoints-ui-screen.md  2-1-watchpoint-management-core.md  2-2-watchpoints-ui-screen.md  2-3-stop-reason-indicator.md  3-1-page-map-screen-physical-columns.md  3-2-logical-cpu-banks-mapping-arrows.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  prd.md  ux-design-specification.md
_bmad/_config/: agent-manifest.csv  bmad-help.csv  files-manifest.csv  manifest.yaml  workflow-manifest.csv
_bmad/bmm/: config.yaml  module-help.csv
assets/: bios.lst  firmware.lst  monitor.lst  monitor.rom  nonsense  palette_1.mem  palette_2.mem  saved  video_registers.mem  z80_instr.txt
docs/: architecture.md  development-guide.md  index.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
src/: assets.cpp  assets.hpp  beast.cpp  beast.hpp  binaryFile.cpp  binaryFile.hpp  breakpointGui.cpp  breakpointGui.hpp  debug.hpp  debugmanager.cpp  debugmanager.hpp  digit.cpp  digit.hpp  display.cpp  display.hpp  gui.cpp  gui.hpp  helpGui.hpp  i2c.cpp  i2c.hpp  instructions.cpp  instructions.hpp  listing.cpp  listing.hpp  pagemap.cpp  pagemap.hpp  rtc.cpp  rtc.hpp  uart16c550.h  videobeast.cpp  videobeast.hpp  z80.h  z80pio.h
tests/: bptest.com  breakpoint_test.asm  breakpoint_test.lst  test_debugmanager.cpp  watchpoint_test.asm  watchpoint_test.lst  wptest.com
(+15 files in other folders)
